# py-project-template

./: README.md  main.py  pyproject.toml  ruff.toml  ty.toml
.ai/skills/code-style/: SKILL.md
.ai/skills/dependencies/: SKILL.md
.ai/skills/python-project/: SKILL.md
.ai/skills/testing/: SKILL.md
